# shopifyscraper

./: README.md  client-cert.pem  client-key.pem  pyproject.toml  result.csv  scraper.py  server-ca.pem
