[tool.poetry]
name = "shopifyscraper"
version = "0.1.0"
description = ""
authors = ["harits"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.3"
selectolax = "^0.3.12"
sqlalchemy = "^2.0.9"
cloud-sql-python-connector = {extras = ["pg8000"], version = "^1.2.1"}
gcloud = "^0.18.3"
google-cloud-storage = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
